Update Smp importer to generate @id tag with element id.
Reuse the @id tag (if any) to generate an smpcat file from an xsmpcat.