@@ -13,7 +13,6 @@ package org.eclipse.xsmp.ide.tests;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.xtext.testing.TextDocumentPositionConfiguration;
 
 import com.google.common.collect.ImmutableMap;
@@ -27,9 +26,11 @@ public class TestUtils
 
     try
     {
-      it.setFilesInScope(ImmutableMap.<String, CharSequence> builder()
-              .put("ecss.smp.xsmpcat", IOUtils.toString(inputStream, StandardCharsets.UTF_8))
-              .build());
+      it.setFilesInScope(
+              ImmutableMap.<String, CharSequence> builder()
+                      .put("ecss.smp.xsmpcat",
+                              new String(inputStream.readAllBytes(), StandardCharsets.UTF_8))
+                      .build());
     }
     catch (final IOException e)
     {
